# survey_application

./: .gitignore  CMakeLists.txt
scripts/: init_db.sql
src/: main.cpp
src/backend/: database.cpp  database.h  server.cpp  server.h
src/common/: types.h
src/frontend/: main.qml
